--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,26 +1,26 @@
 ---
-# Email address for important account notifications
-certbot_dns_email: me@example.com
-
 # List of domains to be used as subjects for the certificate
-certbot_dns_domains:
-  - "{{ ansible_fqdn }}"
+certbot_dns_domains: ["{{ ansible_fqdn }}"]
 
-# The number of seconds to wait for DNS to propagate before asking the ACME
-# server to verify the DNS record
-certbot_dns_propagation_seconds: 10
+# DNS provider name as used with the --dns-<provider> option
+certbot_dns_provider: ""
 
-# ACME directory resource URI
-certbot_dns_server: https://acme-v02.api.letsencrypt.org/directory
+# Path to your DNS provider's credentials file. Unused for Route53.
+certbot_dns_credentials_file: /etc/letsencrypt/{{ certbot_dns_provider }}.{{ 'json' if certbot_dns_provider == 'google' else 'ini' }}
 
-# DNS provider name. As provided to the --dns-<provider> option
-certbot_dns_provider: cloudflare
+# Renew an existing certificate now, regardless of whether it is near expiry
+certbot_dns_force_renewal: false
 
-# INI-file containing credentials for your DNS provider
-certbot_dns_credentials_file: /etc/letsencrypt/{{ certbot_dns_provider }}.ini
+# Whether to add the certbot-copy-files script to /usr/local/bin
+certbot_dns_add_script: false
 
-# INI-file contents
+# Check the official docs for supported options for the following variables!
+
+# ref: https://eff-certbot.readthedocs.io/en/stable/using.html#certbot-command-line-options
+certbot_dns_configuration: {}
+  #deploy_hook: systemctl restart tomcat
+  #no_reuse_key: ~
+
 # ref: https://eff-certbot.readthedocs.io/en/stable/using.html#dns-plugins
-certbot_dns_credentials:
-  dns_cloudflare_email: webadmin@example.com
-  dns_cloudflare_api_key: abcd-1234
+certbot_dns_credentials: {}
+  #dns_digitalocean_token: 1234567890abcdef
